Set up ball (temporary)

--- a/NM3216.csproj
+++ b/NM3216.csproj
@@ -250,6 +250,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\BallMovementScript.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\PlayAreaInputScript.cs" />
     <Compile Include="Assets\Scripts\UIManagerScript.cs" />
