--- a/NM3216.csproj
+++ b/NM3216.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Assets\Scripts\BallMovementScript.cs" />
     <Compile Include="Assets\Scripts\ExitPlayArea.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\KeyBindings.cs" />
     <Compile Include="Assets\Scripts\PlayAreaInputScript.cs" />
     <Compile Include="Assets\Scripts\UIManagerScript.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
