Setting up tutorial

--- a/NM3216.csproj
+++ b/NM3216.csproj
@@ -254,6 +254,7 @@
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\KeyBindings.cs" />
     <Compile Include="Assets\Scripts\PlayAreaInputScript.cs" />
+    <Compile Include="Assets\Scripts\TutorialPanel.cs" />
     <Compile Include="Assets\Scripts\UIManagerScript.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
